# SythConsole

./: CMakeLists.txt  README.md
include/: SythColour.h  SythConsole.h  SythKeyMap.h  SythUtilities.h
src/: SythConsole.cpp
